--- a/0220-Day07-Tue/0220-001(transition).html
+++ b/0220-Day07-Tue/0220-001(transition).html
@@ -36,7 +36,7 @@
                 다른 가속도로 표현하고 싶을 때 가속도 함수 사이트 참고해서 원하는 가속도 복사해서 사용하면 됨.
             transition-property : 트랜지션 적용할 속성 세부설정
                 서로 다른 속성에 각각 transition 설정을 할 수 있다.
-                속성은 순서로 구분한다.
+                속성은 순서로 구분한다. ???
         */
 
         .basic-box:hover {
