--- a/0221-Day08-Wed/0221-homework-H-animation.html
+++ b/0221-Day08-Wed/0221-homework-H-animation.html
@@ -35,7 +35,8 @@
         .left-column-bar {
             width: 50px;
             height: 250px;
-            position: fixed;
+            position: absolute;
+            /* position: fixed; */
             top: 0%;
             left: 0%;
             animation: 3s left-column-bar infinite;            
@@ -44,7 +45,8 @@
         .center-row-bar {
             width: 100px;
             height: 50px;            
-            position: fixed;            
+            position: absolute;
+            /* position: fixed; */
             top: 100px;
             left: 50px;
             animation: 3s center-row-bar infinite;
@@ -53,7 +55,8 @@
         .right-column-bar {
             width: 50px;
             height: 250px;
-            position: fixed;
+            position: absolute;
+            /* position: fixed; */
             top: 0%;
             right: 0%;
             animation: 3s right-column-bar infinite;
