--- a/discord-clone/index.html
+++ b/discord-clone/index.html
@@ -46,7 +46,7 @@
         <div class="section-container">
             <h2>도움이 필요하신가요? 저희가 도와드리겠습니다.</h2>
             <p>계정 설정부터 승인까지 Discord와 관련된 모든 것을 문의하세요.</p>
-            <p>Discord를 시작한 지 얼마 안 되어 팁을 찾고 계신가요? 그렇다면, 저희의 초보자를 위한 가이드를 확인해 보세요!</p>
+            <p>Discord를 시작한 지 얼마 안 되어 팁을 찾고 계신가요? 그렇다면, 저희의 <a href="" class="links">초보자를 위한 가이드를 확인해 보세요!</a></p>
             <ul class="help-contents-wrapper">
                 <li class="help-content">
                     <a href="#">
@@ -122,10 +122,12 @@
         </div>
     </section>
 
-    <section>
+    <section id="more-help">
         <div class="section-container">
-            <h2>도움을 받을 수 있는 다른 방법</h2>            
-            <ul>
+            <h2>도움을 받을 수 있는 다른 방법</h2>
+
+            <ul class="help-contents-wrapper">
+
                 <li class="help-content diff">
                     <a href="#">
                         <img src="img/list-chat.svg" alt="디스코드 아이콘" class="help-content-img">
@@ -133,7 +135,7 @@
                         <p class="content-explane">Discord의 API와 SDK를 이용한 봇, 앱, 게임 개발 지원의 집!</p>
                     </a>
                 </li>
-            </ul>
+            
                 <li class="help-content diff">
                     <a href="#">
                         <img src="img/list-sns.svg" alt="트위터" class="help-content-img">
@@ -141,6 +143,7 @@
                         <p class="content-explane">질문이 있으신가요? 저희에게 트윗을 보내주세요!</p>
                     </a>
                 </li>
+
             </ul>
         </div>
     </section>
